[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gzhutils"
version = "1.1.7"
authors = [
  { name="rkzhai", email="rkzhai7@gmail.com" },
]
description = "Utility package for myself"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython"
]

[project.urls]
"Homepage" = "https://github.com/rk-terence/gzhutils"
"Bug Tracker" = "https://github.com/rk-terence/gzhutils/issues"
