[build-system]
requires = ["setuptools>=68.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gzhutils"
version = "1.3.2"
authors = [
  { name="rkzhai", email="rkzhai7@gmail.com" },
]
description = "Utility package for myself"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython"
]

[project.urls]
"Homepage" = "https://github.com/rk-terence/gzhutils"
"Bug Tracker" = "https://github.com/rk-terence/gzhutils/issues"
